--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,12 +1,12 @@
-name: Aprendiendo GitHub Actions
-run-name: ¡Estoy aprendiendo GitHub Actions!
+name: Aprendiendo Github Actions
+run-name: Estoy aprendiendo Github Actions!!!
 on: [push]
 jobs:
   hola-mundo:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/chechout@v3
+        uses: actions/checkout@v3
       - name: Definir variable
         run: echo "USERNAME=${{ github.actor }}" >> $GITHUB_ENV
       - name: Correr script
